# Ai-Travel-Planner

./: .gitignore  README.md  memory.json  pyproject.toml  requirements.txt  run.py  travel_planner_checkpoints.db  travel_planner_checkpoints.db-shm  travel_planner_checkpoints.db-wal  ui.py
.streamlit/: config.toml
app/: config.py  main.py
app/agent/: decision.py  graph.py  nodes.py  preference_node.py  state.py
app/api/: routes.py  schemas.py
app/llm/: model.py
app/memory/: preferences.py  profile.py  storage.py
app/optimization/: toon.py
app/prompts/: travel_prompt.py
app/schemas/: travel.py
app/streaming/: events.py  stream.py  token_stream.py
app/tools/: currency.py  travel.py  weather.py
assets/: style.css
