[project]
name = "ai-travel-planner"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.139.0",
    "langchain>=1.3.13",
    "langchain-google-genai>=4.2.7",
    "langgraph>=1.2.9",
    "python-dotenv>=1.2.2",
    "toon-format>=0.1.0",
    "uvicorn>=0.51.0",
]
